java-sample/java-sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openshift-quickstarts
  name: openshift-quickstarts
  namespace: lantik-java-sample
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: openshift-quickstarts
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: openshift-quickstarts
        deploymentconfig: openshift-quickstarts
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/lantik-java-sample/openshift-quickstarts@sha256:5ab0eb189c81356ecfc9ddf150e61647dc85f96eee54013f472c8dcefd9c9be9
        imagePullPolicy: Always
        name: openshift-quickstarts
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
