java-sample/java-sample-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openshift-quickstarts
  name: openshift-quickstarts
  namespace: lantik-java-sample
  resourceVersion: "758757263"
spec:
  host: openshift-quickstarts-lantik-java-sample.apps.ocpdesa.aldundia.bfa
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: openshift-quickstarts
    weight: 100
  wildcardPolicy: None
