java-sample/java-sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openshift-quickstarts
  name: openshift-quickstarts
  namespace: lantik-java-sample
  resourceVersion: "758757242"
spec:
  clusterIP: 10.222.228.54
  clusterIPs:
  - 10.222.228.54
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: openshift-quickstarts
    deploymentconfig: openshift-quickstarts
  sessionAffinity: None
  type: ClusterIP
